--- a/src/Plugins/Nop.Plugin.Api/Views/Clients/Edit.cshtml
+++ b/src/Plugins/Nop.Plugin.Api/Views/Clients/Edit.cshtml
@@ -1,10 +1,10 @@
 @{
-    Layout = ViewNames.AdminLayout;
+    Layout = ViewNames.ViewAdminLayout;
 }
 
-@using Nop.Plugin.Api.Constants
 @using Nop.Web.Framework
 @using Nop.Plugin.Api.Models
+@using Nop.Plugin.Api.MVC
 
 @model ClientModel
 
@@ -24,7 +24,7 @@
         </div>
     </div>
     
-    @Html.Partial(ViewNames.AdminApiClientsCreateOrUpdate, Model)  
+    @Html.Partial(ViewNames.ViewAdminApiClientsCreateOrUpdate, Model)  
 }
 
 @Html.DeleteConfirmation("client-delete")
