--- a/src/Plugins/Nop.Plugin.Api/Views/Clients/List.cshtml
+++ b/src/Plugins/Nop.Plugin.Api/Views/Clients/List.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    Layout = ViewNames.AdminLayout;
+    Layout = ViewNames.ViewAdminLayout;
 }
 
 @using Nop.Core.Domain.Common;
 @using Nop.Core.Infrastructure;
-@using Nop.Plugin.Api.Constants
+@using Nop.Plugin.Api.MVC
 
 @{
     var defaultGridPageSize = EngineContext.Current.Resolve<AdminAreaSettings>().DefaultGridPageSize;
@@ -16,7 +16,7 @@
 <div class="section-header">
     <div class="title">
         <img src="@Url.Content("~/Administration/Content/images/ico-catalog.png")" alt="Catalog Icon" />
-        @T("Plugins.Api.ManageClients")
+        @T("Plugins.Api")
     </div>
     <div class="options">
         <a href="Create" class="k-button">@T("Plugins.Api.Admin.Client.AddNew")</a>
